<resources>
    <string name="accept">Accepteren</string>
    <string name="add">Toevoegen</string>
    <string name="add_identity_help_1">De Me App gebruikt profielen, zodat jij je zaken simpel op orde kan houden. Je kan bijvoorbeeld een profiel puur voor overheidszaken houden, zoals paspoortgegevens. Daarnaast kun je dan een profiel aanmaken die je specifiek gebruikt voor internetaankopen.</string>
    <string name="add_identity_help_2">Profielen schermen ook gegevens af. Een gegeven in een profiel kan niet bekend worden in een ander profiel.</string>
    <string name="add_identity_title">Profiel toevoegen</string>
    <string name="alert_add_qr_text">De code bevat gegevens voor %s. Wil je deze aan je identiteit toevoegen?</string>
    <string name="app_name">Me</string>
    <string name="assign_delegates_subtitle">Wijs delegaten aan</string>
    <string name="assign_delegates_title">Delegaten</string>
    <string name="cancel">Annuleren</string>
    <string name="choose_name">Choose name</string>
    <string name="close">Sluiten</string>
    <string name="create">Aanmaken</string>
    <string name="decline">Weigeren</string>
    <string name="do_later">Dit wil ik later doen</string>
    <string name="history">Geschiedenis</string>
    <string name="i_accept">Dit vind ik goed</string>
    <string name="identity">Profiel</string>
    <string name="identities">Profielen</string>
    <string name="let_delegates_scan">Laat delegaten deze code scannen vanaf hun telefoon.</string>
    <string name="loading">Aan het laden…</string>
    <string name="logout">Log uit</string>
    <string name="my_qr_title">Mijn QR-code</string>
    <string name="name">Naam</string>
    <string name="navigation_qr">Me</string>
    <string name="navigation_records">Eigenschappen</string>
    <string name="navigation_wallet">Eigendommen</string>
    <string name="overview">Overzicht</string>
    <string name="passphrase">Wachtwoord</string>
    <string name="passphrase_dont_want">Ik wil geen wachtwoord</string>
    <string name="record_personal">Persoonlijk</string>
    <string name="record_medical">Medisch</string>
    <string name="record_professional">Professioneel</string>
    <string name="record_relations">Relaties</string>
    <string name="record_licences">Licenties</string>
    <string name="record_other">Overig</string>
    <string name="records_title">Over mij</string>
    <string name="register_help_1">Om van je identiteit gebruik te kunnen maken, moet je je eerst registreren. Die gebruikt alleen een wachtwoord. De rest bepaald de applicatie zelf en hoef jij verder niks mee te doen. Simpel, toch?</string>
    <string name="register_help_2">Registreren gebeurt alleen op je telefoon. Hier hoef je geen internet verbinding voor te hebben. De gegevens die je maakt en gebruikt komen namelijk alleen op je telefoon en nergens anders: puur in jouw bezit.</string>
    <string name="restore">Herstellen</string>
    <string name="set_at_least_one_delegate">Neem ten minste 1 delegaat om je gegevens terug te halen bij een verloren telefoon.</string>
    <string name="tab_tokens">Tokens</string>
    <string name="tab_assets">Assets</string>
    <string name="tab_services">Services</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="value_already_exists">%s is al in gebruik</string>
    <string name="value_cannot_be_empty">%s kan niet leeg zijn</string>
    <string name="welcome">Welcome to Me</string>
    <string name="welcome_subtitle">Let\'s set up your identity</string>
    <string name="why_do_i_need_this">Waarom is dit nodig?</string>
    <string name="title_activity_assign_delegates">AssignDelegatesActivity</string>
    <string name="title_activity_create_identity">CreateIdentityActivity</string>
    <string name="title_activity_identity_view">IdentityViewActivity</string>
</resources>
