<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/navigation_wallet"
        android:layout_width="0dp"
        android:layout_height="?android:attr/windowTitleSize"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/wallet_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_tokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_tokens" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_assets" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_services" />
    </android.support.design.widget.TabLayout>


    <io.forus.me.views.wallet.WalletPager
        android:id="@+id/wallet_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_wallet">

    </io.forus.me.views.wallet.WalletPager>

</android.support.constraint.ConstraintLayout>