<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/external_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".external.LoginActivity">

    <TextView
        android:id="@+id/external_login_explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Om van de Stem app gebruik te kunnen maken, moet de app toestemming krijgen om een aantal gegevens van jouw identiteit in te mogen zien. Mag de Stem App de volgende gegevens van jou inzien?"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/external_login_attribute_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/external_login_accept_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_login_explanation"
        app:layout_constraintVertical_bias="0.083"
        tools:context=".external.LoginActivity"
        tools:listitem="@layout/external_login_attribute_list">

    </android.support.v7.widget.RecyclerView>

    <CheckBox
        android:id="@+id/external_login_accept_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/i_accept"
        app:layout_constraintBottom_toTopOf="@+id/external_login_login_decline"
        app:layout_constraintEnd_toStartOf="@+id/external_login_login_decline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_login_attribute_container"
        android:checked="false"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/external_login_login_decline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/decline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/external_login_login_accept"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:onClick="onDecline"
        android:background="@color/negative_button_background"
        android:textColor="@color/negative_button_text"/>

    <Button
        android:id="@+id/external_login_login_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/external_login_login_decline"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:onClick="onAccept"
        android:background="@color/positive_button_background"
        android:textColor="@color/positive_button_text"/>

</android.support.constraint.ConstraintLayout>